Finalizing current system, still need to implement AppConfig, as well as dynamic loading, etc.